--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="./img/cafe1.jpg" alt="">
+                        <img class="imgRecomDia" src="./img/menu/limo.jpg" alt="">
                         <h2>Limonada Casera</h2>
                         <p>Disfruta de nuestra limonada casera, preparada con jugo fresco de limones recién exprimidos y
                             un toque de dulzura perfectamente equilibrado.</p>
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="./img/cafe1.jpg" alt="">
+                        <img class="imgRecomDia" src="./img/bebidas/cafe_capu.png" alt="">
                         <h2>Café Capuccino</h2>
                         <p>Deléitate con nuestra exquisita creación. Una mezcla perfecta de café espresso suave y espuma
                             de leche cremosa, coronado con un toque de cacao en polvo. </p>
@@ -81,7 +81,7 @@
         <div>
             <ul class="main__flexCardEsclavoNM">
                 <li class="boxEsclavoDos">
-                    <a href="./paginas/bebidas.html"><img class="imgMenu" src="./img/cafe1.jpg" alt=""></a>
+                    <a href="./paginas/bebidas.html"><img class="imgMenu" src="./img/menu/bebida_cafe.jpg" alt=""></a>
                     <h2>Bebidas</h2>
                     <p>Descubre nuestra selección de bebidas y déjate llevar por una experiencia de sabor inigualable.
                         Desde el clásico café espresso hasta suaves tés de hierbas, pasando por refrescantes batidos de
@@ -89,7 +89,7 @@
                     <!-- <p>Descubre nuestra selección de bebidas y déjate llevar por una experiencia de sabor inigualable. Desde el clásico café espresso hasta suaves tés de hierbas, pasando por refrescantes batidos de frutas, limonadas caseras y cócteles de café helado. Nuestras bebidas son cuidadosamente preparadas con ingredientes de alta calidad y un toque de creatividad."</p> -->
                 </li>
                 <li class="boxEsclavoDos">
-                    <a href="./paginas/dulces.html"><img class="imgMenu" src="./img/dulces.jpg" alt=""></a>
+                    <a href="./paginas/dulces.html"><img class="imgMenu" src="./img/menu/cheesecake.png" alt=""></a>
                     <h2>Dulces</h2>
                     <p>Sumérgete en un mundo de placer y dulzura con nuestra exquisita pastelería dulce. Desde
                         croissants de chocolate recién horneados hasta tartas de frutas frescas y donas glaseadas,
@@ -97,7 +97,7 @@
                     <!-- <p>Sumérgete en un mundo de placer y dulzura con nuestra exquisita pastelería dulce. Desde croissants de chocolate recién horneados hasta tartas de frutas frescas y donas glaseadas, nuestra pastelería dulce es un paraíso para los amantes de los postres. Cada creación está cuidadosamente preparada para ofrecerte una experiencia única de sabor y calidad.</p> -->
                 </li>
                 <li class="boxEsclavoDos">
-                    <a href="./paginas/salados.html"><img class="imgMenu" src="./img/salado.jpg" alt=""></a>
+                    <a href="./paginas/salados.html"><img class="imgMenu" src="./img/menu/fosforito.jpg" alt=""></a>
                     <h2>Salados</h2>
                     <p>Nuestra pastelería salada es una explosión de sabores y texturas que deleitará tu paladar. Desde
                         los mas ricos sandwich, hasta las clasicas medias lunas con jamón y queso, nuestra
@@ -180,5 +180,4 @@
         crossorigin="anonymous">
     </script>
 </body>
-
 </html>
