--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -55,10 +55,10 @@
                 <h2 class="SD_Subtitulo">La variedad de bebidas es una verdadera celebración para tus sentidos. Desde los ricos y aromáticos cafés espresso y cappuccinos, perfectos para despertar tus mañanas, hasta nuestros refrescantes batidos de frutas y cócteles de café helado que te acompañarán en los días soleados. Nuestra coctelería presenta creaciones originales y clásicos reinventados, ideales para disfrutar en cualquier ocasión. Cada bebida se elabora con esmero y pasión, garantizando que cada sorbo sea una experiencia inolvidable.</h2>
             </div>
             <div class="bebidas__BoxEsclavo">
-                <img class="imgBebida" src="../img/limo.jpg" alt="">
-                <h2>Jugos y Licuados</h2>
+                <img class="imgBebida" src="../img/bebidas/licuados.png" alt="">
+                <h2 class="bebidas__padMar">Licuados</h2>
                 <div>
-                    <ul class="bebidas__padNone">
+                    <ul class="bebidas__padMar">
                         <li>Exprimido de Naranja</li>
                         <li>Limonada</li>
                         <li>Kale Manzana Naranja</li>
@@ -68,10 +68,10 @@
                 </div>
             </div>   
             <div class="bebidas__BoxEsclavo">      
-                <img class="imgBebida" src="../img/Cerveza.jpg" alt="">
-                <h2>Bebidas</h2>
+                <img class="imgBebida" src="../img/bebidas/cerveza.png" alt="">
+                <h2 class="bebidas__padMar">Bebidas</h2>
                 <div>
-                    <ul class="bebidas__padNone">
+                    <ul class="bebidas__padMar">
                         <li>Agua Mineral (con o sin gas)</li>
                         <li>Agua Saborizadas</li>
                         <li>Gaseosas</li>
@@ -81,32 +81,30 @@
                 </div>
             </div>  
             <div class="bebidas__BoxEsclavo">          
-                <img class="imgBebida" src="../img/cafe2.jpg" alt="">
-                <h2>Cafés</h2>
+                <img class="imgBebida" src="../img/bebidas/cafes.png" alt="">
+                <h2 class="bebidas__padMar">Cafés</h2>
                 <div>
-                    <ul class="bebidas__padNone">
+                    <ul class="bebidas__padMar">
                         <li>Espresso</li>
                         <li>Macchiato</li>
                         <li>Espresso Doble</li>
                         <li>Americano</li>
                         <li>Latte</li>
                         <li>Capuccino</li>
-                        <li>Lagrima</li>
                     </ul>
                 </div>
             </div>
             <div class="bebidas__BoxEsclavo">          
-                <img class="imgBebida" src="../img/cafe2.jpg" alt="">
-                <h2>Coctelería</h2>
+                <img class="imgBebida" src="../img/bebidas/coctel.png" alt="">
+                <h2 class="bebidas__padMar">Coctelería</h2>
                 <div>
-                    <ul class="bebidas__padNone">
+                    <ul class="bebidas__padMar">
                         <li>Aperol</li>
                         <li>Cynar</li>
                         <li>Gin Tonic</li>
                         <li>Vermú</li>
                         <li>Negroni</li>
                         <li>Caipiroska</li>
-                        <li>Caipirinha</li>
                     </ul>
                 </div>
             </div>
