--- a/paginas/clubkop.html
+++ b/paginas/clubkop.html
@@ -54,14 +54,14 @@
             <ul class="main__flexCardEsclavo">
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="../img/limo.jpg" alt="">
+                        <img class="imgRecomDia" src="../img/club/limo.jpg" alt="">
                         <h2>Dscto. 20%</h2>
                         <p>Miércoles, Jueves y Viernes en Limonadas.</p>
                     </div>   
                 </li>
                 <li>
                     <div class="boxEsclavo">
-                        <img class="imgRecomDia" src="../img/cafe2.jpg" alt="">
+                        <img class="imgRecomDia" src="../img/club/cafe2.jpg" alt="">
                         <h2>Dscto. 15%</h2>
                         <p>Todos los dias en Café Espresso y Cortado.</p>
                     </div>
