--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -58,7 +58,7 @@
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces" src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces" src="../img/dulces/keylime.jpg" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Key Lime</h3>
@@ -69,7 +69,7 @@
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces" src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces" src="../img/dulces/cheesecake.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Cheesecake</h3>
@@ -80,7 +80,7 @@
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces"  src="../img/dulces/alfajores.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Alfajores</h3>
@@ -91,7 +91,7 @@
                 <li>
                     <div class="dulces__boxEsclavo">
                         <div>
-                            <img class="imgDulces"  src="../img/dulces.jpg" alt="">
+                            <img class="imgDulces"  src="../img/dulces/rogel.png" alt="">
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Torta Rogel</h3>
