--- a/paginas/salados.html
+++ b/paginas/salados.html
@@ -57,7 +57,7 @@
                 <li>
                     <div class="salados__boxEsclavo">
                         <div>
-                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                            <img class="imgSalado"  src="../img/salados/sand_veggie.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Sandwich Veggie</h3>
@@ -68,7 +68,7 @@
                 <li>
                     <div class="salados__boxEsclavo">
                         <div>
-                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                            <img class="imgSalado"  src="../img/salados/sandwich.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Tostado Italiano</h3>
@@ -79,7 +79,7 @@
                 <li>
                     <div class="salados__boxEsclavo">
                         <div>
-                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                            <img class="imgSalado"  src="../img/salados/medialuna_jyq.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Media Luna J&Q</h3>
@@ -90,7 +90,7 @@
                 <li>
                     <div class="salados__boxEsclavo">
                         <div>
-                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                            <img class="imgSalado"  src="../img/salados/trisq_palta.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Trisqueta de Palta</h3>
@@ -101,7 +101,7 @@
                 <li>
                     <div class="salados__boxEsclavo">
                         <div>
-                            <img class="imgSalado"  src="../img/salado.jpg" alt="">
+                            <img class="imgSalado"  src="../img/salados/fosforito.jpg" alt="">
                         </div>
                         <div class="salados__ParraFlex">
                             <h3>Fosforito KOP</h3>
