correción txt dulces

--- a/paginas/dulces.html
+++ b/paginas/dulces.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="dulces__ParraFlex">
                             <h3>Alfajores</h3>
-                            <p>Puedes elegir entre: Dulce de leche, Pistachos o Maicena.</p>
+                            <p>Todos rellenos de dulce de leche. Puedes elegir entre: Dulce de leche, Pistachos o Maicena.</p>
                         </div>
                     </div>
                 </li>
