--- a/paginas/bebidas.html
+++ b/paginas/bebidas.html
@@ -59,11 +59,11 @@
                 <h2 class="bebidas__padMar">Licuados</h2>
                 <div>
                     <ul class="bebidas__padMar">
-                        <li>Exprimido de Naranja</li>
-                        <li>Limonada</li>
-                        <li>Kale Manzana Naranja</li>
-                        <li>Mango Banana Naranja</li>
-                        <li>Pomelada</li>
+                        <li>Exprimido de Naranja.</li>
+                        <li>Limonada.</li>
+                        <li>Kale Manzana Naranja.</li>
+                        <li>Mango Banana Naranja.</li>
+                        <li>Pomelada.</li>
                     </ul>
                 </div>
             </div>   
@@ -72,11 +72,11 @@
                 <h2 class="bebidas__padMar">Bebidas</h2>
                 <div>
                     <ul class="bebidas__padMar">
-                        <li>Agua Mineral (con o sin gas)</li>
-                        <li>Agua Saborizadas</li>
-                        <li>Gaseosas</li>
-                        <li>Cerveza Heineken 330cc</li>
-                        <li>Cerveza Stella Artois 330cc</li>
+                        <li>Agua Mineral (con o sin gas).</li>
+                        <li>Agua Saborizadas.</li>
+                        <li>Gaseosas.</li>
+                        <li>Cerveza Heineken 330cc.</li>
+                        <li>Cerveza Stella Artois 330cc.</li>
                     </ul>
                 </div>
             </div>  
@@ -85,12 +85,12 @@
                 <h2 class="bebidas__padMar">Cafés</h2>
                 <div>
                     <ul class="bebidas__padMar">
-                        <li>Espresso</li>
-                        <li>Macchiato</li>
-                        <li>Espresso Doble</li>
-                        <li>Americano</li>
-                        <li>Latte</li>
-                        <li>Capuccino</li>
+                        <li>Espresso.</li>
+                        <li>Macchiato.</li>
+                        <li>Espresso Doble.</li>
+                        <li>Americano.</li>
+                        <li>Latte.</li>
+                        <li>Capuccino.</li>
                     </ul>
                 </div>
             </div>
@@ -99,12 +99,12 @@
                 <h2 class="bebidas__padMar">Coctelería</h2>
                 <div>
                     <ul class="bebidas__padMar">
-                        <li>Aperol</li>
-                        <li>Cynar</li>
-                        <li>Gin Tonic</li>
-                        <li>Vermú</li>
-                        <li>Negroni</li>
-                        <li>Caipiroska</li>
+                        <li>Aperol.</li>
+                        <li>Cynar.</li>
+                        <li>Gin Tonic.</li>
+                        <li>Vermú.</li>
+                        <li>Negroni.</li>
+                        <li>Caipiroska.</li>
                     </ul>
                 </div>
             </div>
